# vault-informer

./: README.md  informer.py  logrotatevault.conf  pyproject.toml
ci-scripts/: Dockerfile  pipeline_vault-informer.groovy
plugins/: __init__.py  su_esb.py
tests/: create.json  delete.json  update.json
vault_informer/: informer.py
vault_informer/plugins/: __init__.py  stomp.py  su_esb.py
