[tool.poetry]
name = "vault-informer"
version = "0.3.0"
description = "Inform other systems that a Vault secret has been updated"
authors = ["Simon Lundström <simlu+github@su.se>"]
license = "BSD-3-Clause"
include = [{ path = "vault_informer" }]

[tool.poetry.dependencies]
python = ">=3.5.2"
pyinotify = "^0.9.6"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pylint = "^2.6.2"

[tool.poetry.scripts]
informer = 'informer:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "su"
url = "https://maven.it.su.se/repository/su-pypi-group/simple"

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
	'invalid-name',
	'consider-using-f-string',
	'broad-except',
	'too-many-instance-attributes',
	'too-many-arguments',
	'line-too-long',
	'no-member',
	'consider-using-with',
        ]

    output-format = 'parseable'
