[tool.poetry]
name = "vault-informer"
version = "0.5.0"
description = "Inform other systems that a Vault secret has been updated"
authors = ["Simon Lundström <simlu+github@su.se>"]
license = "BSD-3-Clause"
include = [{ path = "vault_informer" }]

[tool.poetry.dependencies]
python = ">=3.5.2"
pyinotify = "^0.9.6"
stomp-py = "^4.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pylint = "^2.6.2"

[tool.poetry.scripts]
informer = 'vault_informer.informer:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
	'invalid-name',
	'too-many-instance-attributes',
	'too-many-arguments',
	'no-member',
        ]

    output-format = 'parseable'
