[tool.poetry]
name = "vault-informer"
version = "1.0.0"
description = "Inform other systems that a Vault secret has been updated"
authors = ["Simon Lundström <simlu+github@su.se>"]
license = "BSD-3-Clause"
include = [{ path = "vault_informer" }]

[tool.poetry.dependencies]
python = "^3.6"
pyinotify = "^0.9.6"
stomp-py  = { version = "^7", optional = true }

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pylint = "^2.6.2"

[tool.poetry.extras]
stomp = ["stomp-py"]

[tool.poetry.scripts]
informer = 'vault_informer.informer:main'

[tool.poetry.plugins."vault_informer.plugins"]
stomp = "vault_informer.plugins.stomp:Stomp"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
    ]

    output-format = 'parseable'
